CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

Version 1.9.5
---------------------------------------------------------------------
9 June 2009
+ Patch# 2800703 - fixed checkBranch for newer php5. Thanks Andrew Patterson.

25 May 2009
+ addValues in Link.php accepts arrays of values now

22 April 2009
+ Added second parameter to PHPWS_Core::stripObjValues - strip_null.
  If true, then null values will not be added to array. False will
  include them.

9 April 2009
+ Removed pass-by reference check from Setup.
+ Added some status checks to setup.

8 April 2009
+ deity only check in test function makes sure user session exists.

Version 1.9.4
---------------------------------------------------------------------
7 Apr 2009
+ Updated jquery and added jquery_ui
+ Datepicker uses new jquery_ui

+ Updated: javascript/jquery_ui/*
           javascript/jquery/head.js
           javascript/jquery/jquery.js
           javascript/datepicker/default.php
           javascript/datepicker/head.js
+ Removed: javascript/jquery/ui.core.js
           javascript/jquery/ui.sortable.js

6 April 2009
+ Freecap - fixed file names in code
+ Core - requireInc now recognizes 'core' as a first parameter
+ Added notes to datepicker readme.
+ Patch #2500039 by Olivier Sannier - cleaned up blog conversion. 
+ Updated: same as 31 March

3 Apr 2009
+ Fixed phatform convert. Wasn't flipping convert flag when done.

31 March 2009
+ Changed freecap file names to allow copying to branches.
+ Updated: javascript/captcha/freecap/*

23 March 2009
+ Cleaning up fckeditor filecabinet plugin
+ Updated Norwegian translation from Anders. THANKS ANDERS!
+ Updated:
javascript/editors/fckeditor/editor/plugins/filecabinet/fckplugin.js
img/ajax-loader-big.gif

20 March 2009
+ Foundation of file cabinet integration with FCKEditor
+ Updated: 
javascript/editors/fckeditor/body.js
javascript/editors/fckeditor/default.js